--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         </activity>
         <activity android:name=".activity.SignupActivity" />
         <activity android:name=".activity.AuthActivity" />
+        <activity android:name=".activity.NewServiceActivity" />
     </application>
 
 </manifest>
